# figaroh-plus

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  DEADJOE  Dockerfile  Generation_EM_main.py  IK.py  Identification_pipeline_main.py  Identification_pipeline_simulated_data_main.py  LICENSE  README.md  calibration.py  environment.yml  genindex.html  index.html  objects.inv  parameters_settings.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/: calibration.doctree  identification.doctree  measurements.doctree  tools.doctree  utils.doctree  visualisation.doctree
.github/workflows/: docs.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/modules/: calibration.rst.txt  tools.rst.txt
calibration/: calibration_tools.py  tiago_simulate_calibration.py  ur10_calibration.py
config/: ur10_config.yaml
data/bag2csv_template_code/: bag_to_csv.py  extract_rosbag.py
data/tiago/: tiago_nov_30_64.csv
data/ur10/: simulation.csv
datasets/: Capture0002.c3d  Capture0003.c3d  Capture0004.c3d  Capture0008_Standing.c3d  README.txt  Standing_Hybrid_1.c3d  Standing_Hybrid_2.c3d  Trial01.c3d  Trial01.csv  Trial02.c3d  Trial02.csv  Trial03.c3d  Trial03.csv  Trial04.c3d  Trial04.csv  Trial108.csv  Trial108.forces  Trial109.c3d  Walking_Hybrid_1_1.c3d  Walking_Hybrid_1_2.c3d  Walking_Hybrid_1_3.c3d  Walking_Hybrid_1_4.c3d  Walking_Hybrid_1_5.c3d  Walking_Hybrid_2.c3d  tPose01.c3d  tPose02.c3d
datasets/Sujet 3/: subject 3.txt  trial-1_body.csv  trial-2_body.csv  trial-3_body.csv  trial-4_body.csv
doc/: figaroh_tiago_description.md  pal_calib_adaptation.md
docs/: Makefile  README.md  eye_hand_calibration.md  make.bat
docs/source/: conf.py
examples/canopies/: calibration.py  optimal_config.py
examples/gepetto_viewer/: display.py
examples/human/: calibration.py  human_calibration_tools.py  identification.py
examples/mate/: calibration.py  calibration_plane.py  forward_kinematics_neutral.py  visualization.py
examples/staubli_TX40/: identification.py
examples/talos/: update_model.py  (+1 more)
identification/: identification_functions_def.py  ur10_identification_example.py
modules/: calibration.html  identification.html  measurements.html  tools.html  utils.html  visualisation.html
src/: CMakeLists.txt
tools/: __init__.py  identification_functions_def.py  qrdecomposition.py  randomdata.py  regressor.py  robot.py  robotcollisions.py  robotvisualization.py  trajectory_functions_def.py
trajectories/: doubleS.py  test_ndcurves_pkg.py  trapezoidal.py
utils/: square_fitting.py  transformation.py
(+337 files in other folders)
